swagger, hide/activate links fix
